--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4685,6 +4685,15 @@ input.calendar {
         }
     }
 }
+.setting-tabs.tabs {
+    li {
+        a.btn-buy2 {
+            @media (min-width:768px) and (max-width:967px) {
+                padding:15px 35px;
+            }
+        }
+    }
+}
 .setting-text {
     @media (min-width:968px) {
         font-size:20px;
@@ -4742,7 +4751,6 @@ input.calendar {
         margin-right: 10%;
     }
     @media (min-width:768px) and (max-width:1199px) {
-        margin-right: 5%;
         position:relative;
         overflow-x: auto;
         table {
@@ -5333,7 +5341,7 @@ input.calendar {
         position:relative;
         display: flex;
         align-items: center;
-        width: 75%;
+        width: 76%;
         &::after {
             position:absolute;
             content:" ";
@@ -5341,7 +5349,7 @@ input.calendar {
             height:4px;
             background-color:#EFF2F4;
             z-index: 1;
-            top:50%;
+            top:27%;
             transform:translateY(-50%);
         }
         .path-item {
@@ -5349,12 +5357,7 @@ input.calendar {
             z-index:2;
             width: 25%;
             text-align: center;
-            @media (min-width:507px) {
-                top:12px;
-            }
-            @media (max-width:506px) {
-                top:18px;
-            }
+            top:0;
             &:first-child {
                 text-align: start!important;
             }
@@ -5362,11 +5365,17 @@ input.calendar {
                 text-align: end!important;
             }
             &:nth-child(2) {
+                @media (min-width:768px) {
+                    padding-right: 5%;
+                }
                 span.path-span {
                     background-color:#775efb;
                 }
             }
             &:nth-child(3) {
+                @media (min-width:768px) {
+                    padding-left: 5%;
+                }
                 span.path-span {
                     background-color:#656df8;
                 }
@@ -5406,7 +5415,7 @@ input.calendar {
     }
     .chosen-packets {
         position: relative;
-        width: 25%;
+        width: 24%;
         text-align: center;
         .chosen-sell-icon {
             position: relative;
@@ -6162,7 +6171,107 @@ input.calendar {
     }
 }
 /* Meeting Report 2 End */
+.main.settings {
+    .setting-item-checkbox {
+        position:relative;
+        .tooltipx {
+            left: 50%;
+            top:-128px;
+            transform:translateX(-50%);
+            &:hover {
+                display: block;
+            }
+        }
+    }
+    .plans-table_x {
+        table {
+            @media (max-width:967px) {
+                width: 100%;
+            }
+            thead {
+                :nth-child(2),:nth-child(3),:nth-child(4),:nth-child(5) {
+                    @media (max-width:967px) {
+                        display: none;
+                    }
+                }
+                @media (max-width:967px) {
+                    th {
+                        &:last-child {
+                            width: 50%;
+                            text-align: center;
+                            a {
+                                font-size:16px;
+                            }
+                        }
+                        &:first-child {
+                            width: 50%;
+                        }
+                    }
+                }
+            }
+            tbody {
+                :nth-child(2),:nth-child(3),:nth-child(4),:nth-child(5) {
+                    @media (max-width:967px) {
+                        display: none;
+                    }
+                }
+                tr td {
+                    @media (max-width:967px) {
+                        font-size:17px;
+                        &:nth-child(1) {
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            white-space: nowrap;
+                        }
+                        &:last-child {
+                            a {
+                                font-size:15px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+.label-control.disable:hover + .tooltipx {
+    display: block;
+}
 
+.main.unp-meeting {
+    @media (min-width:1200px) and (max-width:1679px) {
+        .user-panel-box {
+            .meeting-btn {
+                padding:10px 50px;
+            }
+        }
+    }
+    @media (max-width:767px) {
+        .meeting-adress {
+            font-size:17px;
+            a {
+                font-size:15px;
+            }
+        }
+        .user-panel-box {
+            .meeting-btn {
+                width: 141px;
+                display: block;
+            }
+        }
+    }
+}
+.chosen-text {
+    display: inline-block;
+}
+.meeting-sccw {
+    @media (min-width:768px) and (max-width:1199px) {
+        margin:0 10%;
+    }
+    @media (max-width:767px) {
+        margin:0 15px;
+    }
+}
 .free-trial {
     display: none;
 }
